add japanese translations

--- a/_locales/ja/makecode-minecraft-music-strings.json
+++ b/_locales/ja/makecode-minecraft-music-strings.json
@@ -37,8 +37,8 @@
     "music.noteFrequency|block": "$note",
     "music.pause|block": "$millis休む",
     "music.playMusic|block": "$builtInMusicDiscのレコードをBGMとして再生する||再生位置$position",
-    "music.playNote|block": "play|note $note|on $instrument||$millis休む",
-    "music.playSound|block": "play|sound $sound||$millis休む",
+    "music.playNote|block": "|$noteの音を|$instrumentで|再生する||$millis休む",
+    "music.playSound|block": "$soundのサウンドを再生する||$millis休む",
     "music.setTempo|block": "テンポを$bpm(bpm)にする",
     "music.setVolume|block": "音量を%volumeにする",
     "music.stopSounds|block": "全ての音を止める",
