--- a/_locales/ja/makecode-minecraft-music-strings.json
+++ b/_locales/ja/makecode-minecraft-music-strings.json
@@ -31,6 +31,56 @@
     "MusicDisc.Pigstep|block": "レナ・レーン - Pigstep",
     "MusicDisc.Relic|block": "アーロン・チェロフ - Relic",
     "MusicDisc.Five|block": "Samuel Åberg - 5",
+    "Sound.Blaze|block": "ブレイズが呼吸する",
+    "Sound.BucketSplash|block": "バケツが空になる",
+    "Sound.CatHiss|block": "ネコが威嚇する",
+    "Sound.CatMeow|block": "ネコが鳴く",
+    "Sound.CatPurr|block": "ネコが鳴く2",
+    "Sound.CatPurreow|block": "ネコが鳴く3",
+    "Sound.Chicken|block": "ニワトリが鳴く",
+    "Sound.Click|block": "クリック",
+    "Sound.Cow|block": "ウシが泣く",
+    "Sound.Creeper|block": "クリーパーがダメージを受ける",
+    "Sound.Dolphin|block": "イルカが遊ぶ",
+    "Sound.Drink|block": "飲む",
+    "Sound.Drowned|block": "ドラウンドがダメージを受ける",
+    "Sound.Eat|block": "食べる",
+    "Sound.ElderGuardian|block": "エルダーガーディアンが呪う",
+    "Sound.Endermen|block": "エンダーマンが叫ぶ",
+    "Sound.Explode|block": "爆発する",
+    "Sound.FallDamage|block": "落下ダメージ",
+    "Sound.Fire|block": "火が燃える",
+    "Sound.Firework|block": "花火が爆発する",
+    "Sound.FireworkLarge|block": "大きな花火が爆発する",
+    "Sound.FireworkTwinkle|block": "花火がきらめく",
+    "Sound.Fizz|block": "消火する",
+    "Sound.Fuse|block": "燃える",
+    "Sound.Ghast|block": "ガストが泣く",
+    "Sound.Horse|block": "ウマがいななく",
+    "Sound.Hurt|block": "ダメージを受ける",
+    "Sound.LevelUp|block": "レベルが上がる",
+    "Sound.LightningImpact|block": "雷が落ちる",
+    "Sound.Llama|block": "ラマが唾を吐く",
+    "Sound.Pig|block": "ブタが泣く",
+    "Sound.PlayerAttack|block": "強い攻撃をくり出す",
+    "Sound.PlayerDie|block": "プレイヤーが死ぬ",
+    "Sound.PlayerHurt|block": "プレイヤーがダメージを受ける",
+    "Sound.Rain|block": "雨が降る",
+    "Sound.Sheep|block": "ヒツジが泣く",
+    "Sound.Skeleton|block": "スケルトンが骨を鳴らす",
+    "Sound.Slime|block": "スライムが跳ねる",
+    "Sound.Spider|block": "クモが鳴く",
+    "Sound.Splash|block": "水しぶきが立つ",
+    "Sound.Thunder|block": "雷",
+    "Sound.Totem|block": "トーテムが発動する",
+    "Sound.Trident|block": "トライデントが突き刺さる",
+    "Sound.VillagerHaggle|block": "村人が値切る",
+    "Sound.VillagerNo|block": "村人が取引を拒否する",
+    "Sound.VillagerYes|block": "村人が取引を受諾する",
+    "Sound.WolfBark|block": "オオカミが吠える",
+    "Sound.WolfGrowl|block": "オオカミが唸る",
+    "Sound.WolfWhine|block": "オオカミが泣く",
+    "Sound.Zombie|block": "ゾンビがうめく",
     "music.beat|block": "$fraction|拍",
     "music.changeTempoBy|block": "テンポを$bpm(bpm)変化させる",
     "music.instrument|block": "楽器 $name",
