--- a/_locales/ja/makecode-minecraft-music-strings.json
+++ b/_locales/ja/makecode-minecraft-music-strings.json
@@ -82,14 +82,14 @@
     "Sound.WolfWhine|block": "オオカミが泣く",
     "Sound.Zombie|block": "ゾンビがうめく",
     "music.beat|block": "$fraction|拍",
-    "music.changeTempoBy|block": "テンポを$bpm(bpm)変化させる",
+    "music.changeTempoBy|block": "テンポを$bpm bpm速くする",
     "music.instrument|block": "楽器 $name",
     "music.noteFrequency|block": "$note",
     "music.pause|block": "$millis休む",
     "music.playMusic|block": "$builtInMusicDiscのレコードをBGMとして再生する||再生位置$position",
     "music.playNote|block": "|$noteの音を|$instrumentで|再生する||その後$millis休む",
     "music.playSound|block": "$soundのサウンドを再生する||その後$millis休む",
-    "music.setTempo|block": "テンポを$bpm(bpm)にする",
+    "music.setTempo|block": "テンポを$bpm bpmにする",
     "music.setVolume|block": "音量を%volumeにする",
     "music.stopSounds|block": "全ての音を止める",
     "music.tempo|block": "テンポ (bpm)",
